[project]
name = "modal-app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Dave", email = "dsrr47@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.8",
    "modal>=0.73.41",
    "python-dotenv>=1.0.1",
]

[project.scripts]
modal-app = "modal_app:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
